res/examples/valid/let_decl_returning_fn_expr.eg
let example_fn: function<tuple<number, number>, function<tuple<number>, number>> =
    (a: number, b: number): function<tuple<number>, number> => (c: number): number => { 123 };