res/examples/invalid/let_decl_typed_with_assign_chain_typed.eg
let a: number = b: number = 123;

// out: SyntaxError: unexpected ":"; expected: ["\"!=\"", "\"%\"", "\")\"", "\"*\"", "\"+\"", "\",\"", "\"-\"", "\"/\"", "\";\"", "\"<\"", "\"<=\"", "\"=\"", "\"==\"", "\">\"", "\">=\"", "\"]\"", "\"and\"", "\"or\"", "\"}\""]